--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.codingnomad</groupId>
-	<artifactId>simplebootrest</artifactId>
+	<artifactId>springbootoraclerender</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>simplebootrest</name>
+	<name>springbootoraclerender</name>
 	<description>Spring Boot Simple</description>
 	<properties>
-		<java.version>17</java.version>
+		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -52,7 +53,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>springboot-image-nodb</finalName>
+<!--		<finalName>springbootoraclerender-0.0.1-SNAPSHOT</finalName>-->
 	</build>
 
 </project>
